feature/introspection to sdl (#238)
* checkpoint

* fix: set provided scope for all org.apache.maven dependencies in bootstrap plugin and update commons-io dependency management for plugin best practices

* add dgs-framework and dgs client

* Refactor CodegenExecutor usage and tests for new constructor and service classes. Updated all usages to require SchemaFileService and TypeMappingService instances, refactored tests, removed/replaced static method calls, fixed formatting, and ensured all tests pass. This aligns the codebase with the new architecture and prepares for further feature work.

* remove unecessary getters

* test infra: Move TestCodegenProvider and TestLog to their own files, refactor tests to use them, and remove anonymous and mock loggers for cleaner, reusable test setup

* fix merge

* more unit test coverage

* more unit test coverage

* cleaned up imports

* refactor tests

---------

Co-authored-by: Dewey jose <dewjose@Deweys-MacBook-Pro.local>